fix: address SonarLint issues in EmployeeSchedulerService
- Replace collect(Collectors.toList()) with toList()
- Remove unused contact local variable
- Replace Math.random() with Random.nextInt()

Co-authored-by: Qwen-Coder <qwen-coder@alibabacloud.com>

Co-authored-by: Qwen-Coder <qwen-coder@alibabacloud.com>